Add experience and links to portfolio

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,7 +28,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">What</span> The Fuck
+                    <i class="fa fa-play-circle"></i>  <span class="light">Scroll</span> To Top
                 </a>
             </div>
 
@@ -58,8 +58,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Holy Shit</h1>
-                        <p class="intro-text">I've learned how to cut and paste bootstrap templates.<br>Holy shit, finally.</p>
+                        <h1 class="brand-heading">Oh, It's This Site</h1>
+                        <p class="intro-text">I can use bootstrap templates<br>Yes I can</p>
                         <a href="#about" class="btn btn-circle page-scroll pulse">
                             <i class="fa fa-angle-double-down"></i>
                         </a>
@@ -76,10 +76,10 @@
 
                 <h2>About Aaron</h2>
 
-                <p>Aaron is a l33t hacker from the year a billion. You should hire him, just look at <a href="https://docs.google.com/document/u/1/d/16x0cw5z7w-KDkd5W5ZFJWhA_wuLM_avX9Cmf-8Y05Yw/edit">his resume and portfolio.</a></p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> and seriously I did very little integration work.
-                <p>There's even tutorials for how to do this shit, free online. Like, really, really insultingly simple ones, which tell you which commands to run, and don't expect you to know how to copy and paste.</p>
+                <p>Aaron is a web developer who loves Frankensteining code together. Check out <a href="https://docs.google.com/document/u/1/d/16x0cw5z7w-KDkd5W5ZFJWhA_wuLM_avX9Cmf-8Y05Yw/edit">some other portfolio pieces.</a></p>
+                <p>Aaron codes in React, JS, Ruby, Rails, HTML, CSS, SQL, jQuery, RSpec, Jasmine, and, as of yesterday, Bootstrap.</p>
                 <p>You could see a company paying a thousand dollars for this, right?</p>
+                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a>.
             </div>
         </div>
     </section>
@@ -89,7 +89,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Aaron</h2>
-                <p>Feel free to email me offering a job, sex, or even just dank memes!</p>
+                <p>Feel free to email me offering a job, or other things, even!</p>
                 <p><a href="mailto:asilverb@alaska.edu">asilverb@alaska.edu</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
@@ -105,7 +105,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Nobody. You. Whoever</p>
+            <p>Copyright &copy; Nobody. You. Whoever. </p>
         </div>
     </footer>
 
