update contact info

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -90,7 +90,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Aaron</h2>
                 <p>Feel free to email me offering a job, or other things, even!</p>
-                <p><a href="mailto:asilverb@alaska.edu">asilverb@alaska.edu</a>
+                <p><a href="mailto:aaron.silverbook@gmail.com">aaron.silverbook@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
