--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,8 +11,8 @@
 
     <title>Bootstrap Shenanigans</title>
 
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
 
 
@@ -92,6 +92,7 @@
                 <p>Feel free to email me offering a job, or other things, even!</p>
                 <p><a href="mailto:aaron.silverbook@gmail.com">aaron.silverbook@gmail.com</a>
                 </p>
+                <p><a href="https://www.linkedin.com/in/aaronsilverbook">My LinkedIn </a>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://github.com/jayterwahl" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
