Remove redundant references to google maps

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -111,7 +111,7 @@
     </footer>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/main.min.js"></script>
+   <!--<script src="/js/main.min.js"></script> -->
 
 </body>
 
