--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,7 +28,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Scroll</span> To Top
+                    <i class="fa fa-play-circle"></i>  <span class="light">Scroll Up Real Smooth</span>
                 </a>
             </div>
 
@@ -58,7 +58,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Oh, It's This Site</h1>
+                        <h1 class="brand-heading">Oh, Good, It's This Site</h1>
                         <p class="intro-text">I can use bootstrap templates<br>Yes I can</p>
                         <a href="#about" class="btn btn-circle page-scroll pulse">
                             <i class="fa fa-angle-double-down"></i>
